tests/test147.rael.exp
Error [1:5]: Expected at least one expression after "show"
| show
|     ^
